@@ -181,8 +181,9 @@ void FIF::run( Session* session, const string& src ){
     // Open image and update timestamp
     (*session->image)->openImage();
 
-    // Check timestamp consistency. If cached timestamp is older, update metadata
-    if( timestamp>0 && (timestamp < (*session->image)->timestamp) ){
+    // Check timestamp consistency. If cached timestamp is different, update metadata
+    if( timestamp>0 && (timestamp != (*session->image)->timestamp) ){
+      timestamp = -1;    // Indicate that we have a reloaded image
       if( session->loglevel >= 2 ){
 	*(session->logfile) << "FIF :: Image timestamp changed: reloading metadata" << endl;
       }
@@ -231,7 +232,7 @@ void FIF::run( Session* session, const string& src ){
     t = timegm( &mod_t );
     if( (session->loglevel >= 1) && (t == -1) ) *(session->logfile) << "FIF :: Error creating timestamp" << endl;
 
-    if( (*session->image)->timestamp <= t ){
+    if( (timestamp != -1) && ((*session->image)->timestamp != t) ){
       if( session->loglevel >= 2 ){
 	*(session->logfile) << "FIF :: Unmodified content" << endl;
 	*(session->logfile) << "FIF :: Total command time " << command_timer.getTime() << " microseconds" << endl;
